--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,10 @@ strategy:
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '$(python.version)'
+    versionSpec: 3.11
   displayName: 'Use Python $(python.version)'
 
-- script: |
+- script: |3.11
     python -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
